objects/EUR_CRM_Contract_Event_To_Prod_Mapping__c.object
<CustomObject>
    <description>Join object for many to many relationship between the Contract Mechanic and Contract Event</description>
    <fields>
        <fullName>EUR_CRM_Contract_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Event</label>
        <referenceTo>EUR_CRM_Contract_Event__c</referenceTo>
        <relationshipName>Contract_Event_Product_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Mechanic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Mechanic</label>
        <referenceTo>EUR_CRM_Contract_Mechanic__c</referenceTo>
        <relationshipName>Contract_Event_Product_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Contract Event - Product Mapping (EU)</label>
    <nameField>
        <displayFormat>CEPM-{0000000000}</displayFormat>
        <label>Contract Event - Product Mapping ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Event - Product Mapping (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_CRM_FI_Contract_Event_Product_Mapping_Education</fullName>
        <active>true</active>
        <label>EUR FI Contract Event - Product Mapping - Education</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_FI_Contract_Event_Product_Mapping_Trip</fullName>
        <active>true</active>
        <label>EUR FI Contract Event - Product Mapping - Trip</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>